; ModuleID = '/home/carl/AnghaBench/freebsd/sys/nlm/extr_nlm_prot_clnt.c_nlm_unlock_msg_1.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/nlm/extr_nlm_prot_clnt.c_nlm_unlock_msg_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nlm_unlockargs = type { i32 }
%struct.rpc_callextra = type { i32 }
%struct.timeval = type { i32 }

@NLM_UNLOCK_MSG = common dso_local global i32 0, align 4
@xdr_nlm_unlockargs = common dso_local global i64 0, align 8
@xdr_void = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nlm_unlock_msg_1(%struct.nlm_unlockargs* %0, i8* %1, i32* %2, %struct.rpc_callextra* %3, i32 %4) #0 {
  %6 = alloca %struct.timeval, align 4
  %7 = alloca %struct.nlm_unlockargs*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.rpc_callextra*, align 8
  %11 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 0
  store i32 %4, i32* %11, align 4
  store %struct.nlm_unlockargs* %0, %struct.nlm_unlockargs** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32* %2, i32** %9, align 8
  store %struct.rpc_callextra* %3, %struct.rpc_callextra** %10, align 8
  %12 = load i32*, i32** %9, align 8
  %13 = load %struct.rpc_callextra*, %struct.rpc_callextra** %10, align 8
  %14 = load i32, i32* @NLM_UNLOCK_MSG, align 4
  %15 = load i64, i64* @xdr_nlm_unlockargs, align 8
  %16 = trunc i64 %15 to i32
  %17 = load %struct.nlm_unlockargs*, %struct.nlm_unlockargs** %7, align 8
  %18 = ptrtoint %struct.nlm_unlockargs* %17 to i32
  %19 = load i64, i64* @xdr_void, align 8
  %20 = trunc i64 %19 to i32
  %21 = load i8*, i8** %8, align 8
  %22 = ptrtoint i8* %21 to i32
  %23 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @CLNT_CALL_EXT(i32* %12, %struct.rpc_callextra* %13, i32 %14, i32 %16, i32 %18, i32 %20, i32 %22, i32 %24)
  ret i32 %25
}

declare dso_local i32 @CLNT_CALL_EXT(i32*, %struct.rpc_callextra*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
